// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Тестирование Button > Кнопка должна быть включена, когда свойство disabled равно false 1`] = `
<DocumentFragment>
  <button
    class="relative flex items-center justify-center gap-4 cursor-pointer rounded-sm w-[216px] outline-offset-4 outline-transparent outline-2 desk-body-regular-l transition duration-12 active:scale-[0.97] disabled:pointer-events-none bg-color-primary-default text-color-white hover:bg-color-primary-hover active:bg-color-primary-hover focus:bg-color-primary-default focus:outline-primary-focus disabled:bg-color-primary-disabled h-12 initial"
    data-testid="test-button"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`Тестирование Button > Кнопка должна быть отключена, когда свойство disabled равно true 1`] = `
<DocumentFragment>
  <button
    class="relative flex items-center justify-center gap-4 cursor-pointer rounded-sm w-[216px] outline-offset-4 outline-transparent outline-2 desk-body-regular-l transition duration-12 active:scale-[0.97] disabled:pointer-events-none bg-color-primary-default text-color-white hover:bg-color-primary-hover active:bg-color-primary-hover focus:bg-color-primary-default focus:outline-primary-focus disabled:bg-color-primary-disabled h-12 initial"
    data-testid="test-button"
    disabled=""
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`Тестирование Button > Кнопка должна отображать иконку слева до текста, если она передана 1`] = `
<DocumentFragment>
  <button
    class="relative flex items-center justify-center gap-4 cursor-pointer rounded-sm w-[216px] outline-offset-4 outline-transparent outline-2 desk-body-regular-l transition duration-12 active:scale-[0.97] disabled:pointer-events-none bg-color-primary-default text-color-white hover:bg-color-primary-hover active:bg-color-primary-hover focus:bg-color-primary-default focus:outline-primary-focus disabled:bg-color-primary-disabled h-12 initial"
    data-testid="test-button"
    type="button"
  >
    <span
      class="size-5 flex items-center justify-center"
    >
      <span
        aria-label="icon"
        role="img"
      >
        🌟
      </span>
    </span>
    Click me!
  </button>
</DocumentFragment>
`;

exports[`Тестирование Button > Кнопка должна отображать иконку справа после текста, если она передана 1`] = `
<DocumentFragment>
  <button
    class="relative flex items-center justify-center gap-4 cursor-pointer rounded-sm w-[216px] outline-offset-4 outline-transparent outline-2 desk-body-regular-l transition duration-12 active:scale-[0.97] disabled:pointer-events-none bg-color-primary-default text-color-white hover:bg-color-primary-hover active:bg-color-primary-hover focus:bg-color-primary-default focus:outline-primary-focus disabled:bg-color-primary-disabled h-12 initial"
    data-testid="test-button"
    type="button"
  >
    Click me!
    <span
      class="size-5 flex items-center justify-center"
    >
      <span
        aria-label="icon"
        role="img"
      >
        🌟
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`Тестирование Button > Кнопка должна рендериться с правильным текстом 1`] = `
<DocumentFragment>
  <button
    class="relative flex items-center justify-center gap-4 cursor-pointer rounded-sm w-[216px] outline-offset-4 outline-transparent outline-2 desk-body-regular-l transition duration-12 active:scale-[0.97] disabled:pointer-events-none bg-color-primary-default text-color-white hover:bg-color-primary-hover active:bg-color-primary-hover focus:bg-color-primary-default focus:outline-primary-focus disabled:bg-color-primary-disabled h-12 initial"
    data-testid="test-button"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`Тестирование Button > Кнопка меняет тип, если передать type 1`] = `
<DocumentFragment>
  <button
    class="relative flex items-center justify-center gap-4 cursor-pointer rounded-sm w-[216px] outline-offset-4 outline-transparent outline-2 desk-body-regular-l transition duration-12 active:scale-[0.97] disabled:pointer-events-none bg-color-primary-default text-color-white hover:bg-color-primary-hover active:bg-color-primary-hover focus:bg-color-primary-default focus:outline-primary-focus disabled:bg-color-primary-disabled h-12 initial"
    data-testid="test-button"
    type="reset"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`Тестирование Button > Кнопка применяет нужные стили при передаче props textFormat 1`] = `
<DocumentFragment>
  <button
    class="relative flex items-center justify-center gap-4 cursor-pointer rounded-sm w-[216px] outline-offset-4 outline-transparent outline-2 desk-body-regular-l transition duration-12 active:scale-[0.97] disabled:pointer-events-none bg-color-primary-default text-color-white hover:bg-color-primary-hover active:bg-color-primary-hover focus:bg-color-primary-default focus:outline-primary-focus disabled:bg-color-primary-disabled h-12 uppercase"
    data-testid="test-button"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`Тестирование Button > На кнопку добавляется новый класс, если передается className 1`] = `
<DocumentFragment>
  <button
    class="relative flex items-center justify-center gap-4 cursor-pointer rounded-sm w-[216px] outline-offset-4 outline-transparent outline-2 desk-body-regular-l transition duration-12 active:scale-[0.97] disabled:pointer-events-none bg-color-primary-default text-color-white hover:bg-color-primary-hover active:bg-color-primary-hover focus:bg-color-primary-default focus:outline-primary-focus disabled:bg-color-primary-disabled h-12 initial testClassName"
    data-testid="test-button"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;
